--- a/src/views/pvp.ejs
+++ b/src/views/pvp.ejs
@@ -11,7 +11,16 @@
     <div id="particles-js"></div>
     <div class="container">
       <h1>THE CHESS CHALLENGE</h1>
+      <!-- Tampilkan Nama dan NPM Pemain -->
+      <div class="players-info">
+        <h2>Player 1</h2>
+        <p>Nama: <%= player1.name %></p>
+        <p>NPM: <%= player1.npm %></p>
 
+        <h2>Player 2</h2>
+        <p>Nama: <%= player2.name %></p>
+        <p>NPM: <%= player2.npm %></p>
+      </div>
       <ul>
         <div class="div" id="row8">
           <li class="box" id="b801">Brook</li>
