--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -60,7 +60,7 @@
 
     <script>
       function startPvP() {
-        window.location.href = "/play/pvp";
+        window.location.href = "/play/Border";
       }
 
       function setDifficulty(level) {
