--- a/src/views/info.ejs
+++ b/src/views/info.ejs
@@ -20,6 +20,12 @@
       <div class="info-content">
         <p>Website ini dikembangkan oleh <strong>DACHEES</strong>.</p>
         <p>
+          Nama pengembang:
+          <ul class="developer-list">
+            <li>Dhandi Adam 4522210147</li>
+            <li>Andika Haikal 4523210016</li>
+            <li>Mesak Mychart 4534310062</li>
+          </ul>
           Tujuan utama dari website ini adalah untuk menyediakan platform
           permainan catur dengan pengalaman visual yang menarik dan interaktif.
         </p>
@@ -28,7 +34,7 @@
           >www.example.com</a
         >
       </div>
-
+      
       <!-- Link Kembali ke Home dengan tombol bergaya -->
       <a href="/" class="back-button">Kembali ke Home</a>
     </div>
