--- a/public/css/game.css
+++ b/public/css/game.css
@@ -112,12 +112,12 @@ li {
 #tog {
   font-size: 22px;
   font-weight: bold;
-  color: #ffffff;
-  background-color: #444;
+  color: #fffc55;
+  background-color: rgba(231, 198, 154, 0.9);
   padding: 10px 20px;
   border-radius: 10px;
-  margin-top: 20px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  margin-top: 15px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
 .container {
@@ -136,6 +136,8 @@ li {
   border: none;
   border-radius: 8px;
   transition: background-color 0.3s;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+  
 }
 
 #reset-btn:hover {
