--- a/public/css/border.css
+++ b/public/css/border.css
@@ -72,17 +72,20 @@ button {
   background-color: #ffd700;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
   color: #ffffff;
+  font-weight: bold;
   border: none;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
   margin-bottom: 10px;
   transition: background-color 0.3s ease;
 }
 
 button:hover {
-  background-color: #ebe708;
+  background-color: #d8d508;
   color: #fffffd;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 #back-button {
