--- a/public/css/game.css
+++ b/public/css/game.css
@@ -122,7 +122,7 @@ li {
 
 .container {
   display: grid;
-  grid-template-rows: auto auto 1fr auto auto;
+  grid-template-rows: auto auto 1fr auto auto;~
   row-gap: 20px;
   justify-items: center;
 }
