--- a/src/views/pvp.ejs
+++ b/src/views/pvp.ejs
@@ -13,13 +13,41 @@
       <h1>THE CHESS CHALLENGE</h1>
       <!-- Tampilkan Nama dan NPM Pemain -->
       <div class="players-info" id="players-info">
-        <h2 id="current-player">
-          Giliran: <span id="current-player-name"><%= player1.name %></span>
-        </h2>
-        <p>Player 1 Nama: <%= player1.name %></p>
-        <p>Player 1 NPM: <%= player1.npm %></p>
-        <p>Player 2 Nama: <%= player2.name %></p>
-        <p>Player 2 NPM: <%= player2.npm %></p>
+        <div class="current-turn">
+          <h2 id="current-player">
+            Giliran: <span id="current-player-name"><%= player1.name %></span>
+          </h2>
+        </div>
+
+        <div class="players-container">
+          <div class="player-card player-one">
+            <h3>Player 1</h3>
+            <div class="player-details">
+              <p>
+                <span>Nama:</span>
+                <span><%= player1.name %></span>
+              </p>
+              <p>
+                <span>NPM:</span>
+                <span><%= player1.npm %></span>
+              </p>
+            </div>
+          </div>
+
+          <div class="player-card player-two">
+            <h3>Player 2</h3>
+            <div class="player-details">
+              <p>
+                <span>Nama:</span>
+                <span><%= player2.name %></span>
+              </p>
+              <p>
+                <span>NPM:</span>
+                <span><%= player2.npm %></span>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       <ul>
         <div class="div" id="row8">
@@ -113,12 +141,9 @@
 
       <h2 id="tog">Player 1 Nama: <%= player1.name %></h2>
       <h2 id="reset-btn">Reset</h2>
-    </div>
 
-    <!-- Tambahkan musik di sini -->
-    <audio autoplay loop>
-      <source src="bossa_uh_potsu.mp3" type="audio/mpeg" />
-    </audio>
+      <h2 id="backbutton" onclick="BacktoBorder()">Kembali kemenu</h2>
+    </div>
 
     <script>
       window.playerData = {
@@ -133,6 +158,9 @@
 
     <!-- Konfigurasi Particles.js -->
     <script>
+      function BacktoBorder() {
+        window.location.href = "/play/Border";
+      }
       particlesJS("particles-js", {
         particles: {
           number: {
@@ -170,5 +198,10 @@
         retina_detect: true,
       });
     </script>
+
+    <audio autoplay loop>
+      <source src="path/to/music.mp3" type="audio/mpeg" />
+      Browser Anda tidak mendukung tag audio.
+    </audio>
   </body>
 </html>
